@@ -1,11 +1,11 @@
-$NetBSD: patch-ab,v 1.3 2000/09/06 08:16:16 jlam Exp $
+$NetBSD: patch-ab,v 1.4 2002/11/27 11:03:32 agc Exp $
 
 --- filters/makefile.in.orig	Sun Oct 10 21:06:52 1999
 +++ filters/makefile.in	Wed Sep  6 03:52:09 2000
-@@ -34,7 +34,7 @@
+@@ -38,7 +38,7 @@
  
  libdir		= @libdir@
- bindir		= @VILE_LIBDIR_PATH@
+ bindir		= @filters_bindir@
 -datadir		= @datadir@/vile
 +datadir		= @datadir@
  
